--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 							<p>And there are no hoverboards or flying cars.<br />
 							Just apps. Lots of mother flipping apps.</p>
 						</header>
-						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+						<span class="image"><img src="images/pic01.jpeg" alt="" /></span>
 					</div>
 				</section>
 
