--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 										<ul>
 											<li><a href="index.html">Home</a></li>
 											<li><a href="elements.html">Mes Projets</a></li>
-											<li><a href="generic.html">CV</a></li>
+											<li><a href="cv.html">CV</a></li>
 											<li><a href="elements.html">Contact</a></li>
 										</ul>
 									</div>
@@ -117,11 +117,11 @@
 									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
 								</li>
 								<li class="fab fa-github">
-									<h3>Aenean Primis</h3>
+									<h3>GitHub</h3>
 									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
 								</li>
 								<li class="fab fa-wordpress-simple">
-									<h3>Tortor Ut</h3>
+									<h3>WordPress</h3>
 									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
 								</li>
 							</ul>
