Modified Main page banner for responsive

--- a/index.html
+++ b/index.html
@@ -131,13 +131,8 @@
 				<!-- CTA -->
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
-							<header>
-								<h2>Arcue ut vel commodo</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
-							</header>
 							<ul class="actions stacked">
-								<li><a href="#" class="button fit primary">Activate</a></li>
-								<li><a href="https://github.com/Tux87" class="button fit">Learn More</a></li>
+								<li><a href="index.html" class="button fit">Retourner En Haut</a></li>
 							</ul>
 						</div>
 					</section>
