Added description on first page

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 						<div class="inner">
 							<header class="major">
 								<h2>Bienvenue</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<p>Passionné par l'informatique depuis l'enfance, j'ai souhaité lier mon métier à cette passion. C'est pour cela que j'ai entamé une reconversion professionnelle chez O'Clock en juin 2021. En complément de ma soif d'apprendre, cette formation m'a permis d'acroître et de structurer mes connaissances dans le domaine du développement et de la gestion de projets.</p>									
+								<p>Aujourd'hui, je continue d'apprendre de manière autonome et à parfaire mes acquis, notamment par la préparation à la certification Opquast "Maîtrise de la qualité en projet Web".</p>
 							</header>
 							<ul class="icons major">
 								<li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
