--- a/cv2.html
+++ b/cv2.html
@@ -37,69 +37,20 @@
 						</nav>
 					</header>
 
-				<!-- Banner -->
-				<section id="banner">
-					<div class="content">
-						<header>
-							<h2>Edward Juniper</h2>
-							<p>Développeur Web Backend</p>
-							<p>Symfony</p>
-						</header>
-						<span class="image"><img src="images/pic01.jpeg" alt="" /></span>
-					</div>
-				</section>
+				<!-- Main -->
+                <article id="main">
+                    <header>
+                        <h2>Curriculum Vitae</h2>
 
-				<!-- One -->
-					<section id="one" class="wrapper style1 special">
-						<div class="inner">
-							<header class="major">
-								<h2>Bienvenue</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
-							</header>
-							<ul class="icons major">
-								<li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
-								<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
-								<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li>
-							</ul>
-						</div>
-					</section>
-
-				<!-- Two -->
-					<section id="two" class="wrapper alt style2">
-						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Magna primis lobortis<br />
-								sed ullamcorper</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-							</div>
-						</section>
-						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Tortor dolore feugiat<br />
-								elementum magna</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-							</div>
-						</section>
-						<section class="spotlight">
-							<div class="image"><img src="images/pic04.jpg" alt="" /></div><div class="content">
-								<h2>Augue eleifend aliquet<br />
-								sed condimentum</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-							</div>
-						</section>
-					</section>
-
-				
-
-				<!-- CTA -->
-					<!-- <section id="cta" class="wrapper style4">
-						<div class="inner">
-							<ul class="actions special">
-								<li><a href="index.html" class="button fit">Accueil</a></li>
-							</ul>
-						</div>
-					</section> -->
+                        <section id="cta" class="wrapper style4">
+                            <div class="inner">
+                                <ul class="actions special">
+                                    <li><a href="assets/docs/CV Edward Juniper.pdf" class="button fit">Telecharger mon CV</a></li>
+                                </ul>
+                            </div>
+                        </section>
+                    </header>
+                </article>
 
 				<!-- Footer -->
 					<footer id="footer">
