Removed download link, click image to download

--- a/cv.html
+++ b/cv.html
@@ -47,16 +47,9 @@
 					<section id="one" class="wrapper style2 special">
 						<div class="inner">
 							<section id="content">
-								<a href="#" class="image fit"><img src="assets/docs/CV Edward Juniper.png" alt="Edward Juniper CV" /></a>
+								<a href="assets/docs/CV Edward Juniper.pdf" class="image fit"><img src="assets/docs/CV Edward Juniper.png" alt="Edward Juniper CV" /></a>
 							</section>
 						</div>
-						<div id="cta" class="wrapper style4">
-							<div class="inner">
-								<ul class="actions special">
-									<li><a href="assets/docs/CV Edward Juniper.pdf" class="button fit">Telecharger</a></li>
-								</ul>
-							</div>
-						</div>	
 					</section>
 
 				<!-- Footer -->
