Added descriptions homepage

--- a/index.html
+++ b/index.html
@@ -50,41 +50,35 @@
 				</section>
 
 				<!-- One -->
-					<section id="one" class="wrapper style1 special">
+					<!-- <section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
 								<h2>Bienvenue</h2>
-								<p>Passionné par l'informatique depuis l'enfance, j'ai souhaité lier mon métier à cette passion. C'est pour cela que j'ai entamé une reconversion professionnelle chez O'Clock en juin 2021. En complément de ma soif d'apprendre, cette formation m'a permis d'acroître et de structurer mes connaissances dans le domaine du développement et de la gestion de projets.</p>									
-								<p>Aujourd'hui, je continue d'apprendre de manière autonome et à parfaire mes acquis, notamment par la préparation à la certification Opquast "Maîtrise de la qualité en projet Web".</p>
 							</header>
-							<ul class="icons major">
-								<li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
-								<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
-								<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li>
-							</ul>
 						</div>
-					</section>
+					</section> -->
 
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Magna primis lobortis<br />
-								sed ullamcorper</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
+								<h2>Un peu sur moi</h2>
+								<p>Passionné par l'informatique depuis l'enfance, j'ai souhaité lier mon métier à cette passion. C'est pour cela que j'ai entamé une reconversion professionnelle chez O'Clock en juin 2021. En complément de ma soif d'apprendre, cette formation m'a permis d'acroître et de structurer mes connaissances dans le domaine du développement web et de la gestion de projets.</p>									
+								<p>Aujourd'hui, je continue d'apprendre de manière autonome et à parfaire mes acquis, notamment par la préparation à la certification Opquast "Maîtrise de la qualité en projet Web".</p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Tortor dolore feugiat<br />
-								elementum magna</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
+								<h2>L'ecole O'Clock c'est:</h2>
+								<h5>6 mois (800h) pour devenir développeur web</h5>
+								<p>- 3 mois de "socle": HTML / CSS / PHP / JavaScript</p>
+								<p>- 5 semaines de specialisation sur le framework Symfony</p>
+								<p>- 1 mois de projet de fin de formation en équipe: <br />"Keskonmate ?"</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic04.jpg" alt="" /></div><div class="content">
-								<h2>Augue eleifend aliquet<br />
-								sed condimentum</h2>
+								<h2>Ce que je recherche</h2>
 								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
 							</div>
 						</section>
