Fixed competences texts

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>L'ecole O'Clock c'est:</h2>
+								<h2>Qu'est ce que la formation O'Clock?</h2>
 								<h5>6 mois (800h) pour devenir développeur web</h5>
 								<p>- 3 mois de "socle": HTML / CSS / PHP / JavaScript</p>
 								<p>- 5 semaines de specialisation sur le framework Symfony</p>
@@ -97,11 +97,12 @@
 								</li>
 								<li class="fab fa-php">
 									<h3>PHP</h3>
+									
 									<p>Ce language permet de rendre vos pages web dynamiques. Depuis sa création en 1995, et au travers de nombreuses mises à jour, il est l'un des languages les plus utilisés de l'internet. Environ 80% des sites comportent du PHP. </p>
 								</li>
 								<li class="fas fa-database">
 									<h3>MySQL</h3>
-									<p>Ce système de gestion de bases de données relationnelle permet, grâce à sa structure, de faciliter la récupération et l'utilisation des informations stockées (textes d'articles, les avis, les commentaires,...). </p>
+										<p>Ce système de gestion de bases de données relationnelle permet, grâce à sa structure, de faciliter la récupération et l'utilisation des informations stockées (textes d'articles, les avis, les commentaires,...). </p>
 								</li>
 								<li class="fas fa-code">
 									<h3>HTML / CSS</h3>
